# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.493 2005/12/28 16:58:43 rocket Exp $

  28 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
  modules/generic_stage_target.py, modules/netboot_target.py,
  modules/stage1_target.py:
  make setting of destdir more global and part of generic_stage_target

  28 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/netboot_target.py:
  Fix destpath bug in netboot target

  28 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py:
  Fix for bug 116305;removed unnecessary pkgcache_path processing from the
  stage4 target

  23 Dec 2005; Eric Edgar <rocket@gentoo.org> arch/sh.py,
  modules/generic_stage_target.py, modules/stage4_target.py:
  remove stray ' from arch/sh.py

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/stage1/stage1-controller.sh:
  This finally fixes the issues with gcc-config/binutils-config in stage1.
  This is catalyst 2.0_rc12.

  21 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/snapshot_target.py:
  Fix incorrect warning message.  portdir_overlay -> portage_overlay

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh:
  Revert gcc-config/binutils-config to _rc11 locations. This should fix
  running gcc-config and binutils-config, though it probably breaks running on
  non-Gentoo platforms.

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/stage1_target.py:
  Make stage1 clean up python 2.3 and 2.4, also.

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> README,
  targets/support/livecdfs-update.sh:
  Updated requirements and added creation of metadata.tar.bz2 for the installer.

  21 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Change digests file format to HASH_NAME HASH FILE_NAME
